fixing the error in the continuous deployment pipeline

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,7 +80,10 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      
+        
+      - name: List images in ECR repository
+        run: |
+          aws ecr describe-images --repository-name ${{ secrets.ECR_REPOSITORY_NAME }}
       
       - name: Pull latest images
         run: |
