--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,9 +83,6 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Install unzip
-        run: sudo apt-get install unzip -y
-
       - name: Check AWS CLI version
         run: aws --version
 
@@ -93,8 +90,15 @@ jobs:
         run: |
           aws ecr describe-images --repository-name ${{ secrets.ECR_REPOSITORY_NAME }}
       
+      - name: Print environment variables
+        run: |
+          echo ECR_REPOSITORY_NAME: ${{ secrets.ECR_REPOSITORY_NAME }}
+          echo AWS_REGION: ${{ secrets.AWS_REGION }}
+          echo AWS_ECR_LOGIN_URI: ${{ secrets.AWS_ECR_LOGIN_URI }}
+          
       - name: Pull latest images
         run: |
+         aws ecr get-login-password --region ${{ secrets.AWS_REGION }} --debug | docker login --username AWS --password-stdin ${{secrets.AWS_ECR_LOGIN_URI}}
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          
       # - name: Stop and remove container if running
